edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

// Represents the data structure for an ActivitiesGen2v1 transfer.
// See Appendix 7, Section 2.2.6.3.
message ActivitiesGen2v1 {

  message CardIWRecord {
    // See Appendix 1, 2.177
    string card_holder_name = 1;
    string full_card_number = 2;
    uint32 card_expiry_date = 3;
    uint32 card_insertion_time_seconds = 4;
    uint32 odometer_at_insertion_km = 5;
    uint32 card_slot_number = 6;
    uint32 card_withdrawal_time_seconds = 7;
    uint32 odometer_at_withdrawal_km = 8;
    string previous_vrn = 9;
    uint32 previous_card_withdrawal_time_seconds = 10;
    uint32 manual_input_flag = 11;
  }

  message ActivityChange {
    // See Appendix 1, 2.1
    uint32 slot = 1;
    uint32 driving_status = 2;
    uint32 card_status = 3;
    uint32 activity = 4;
    uint32 time_of_change_minutes = 5;
  }

  message PlaceRecord {
    // See Appendix 1, 2.117
    uint32 entry_time_seconds = 1;
    uint32 entry_type = 2;
    uint32 country = 3;
    uint32 region = 4;
    uint32 odometer_km = 5;
  }

  message GnssAccumulatedDrivingRecord {
    // See Appendix 1, 2.203 & 2.80
    uint32 timestamp_seconds = 1;
    uint32 gnss_accuracy = 2;
    sint32 longitude = 3; // GeoCoordinates
    sint32 latitude = 4;  // GeoCoordinates
  }

  message SpecificConditionRecord {
    // See Appendix 1, 2.152
    uint32 entry_time_seconds = 1;
    uint32 specific_condition_type = 2;
  }

  uint32 date_of_day_seconds = 1;
  uint32 odometer_midnight_km = 2;
  repeated CardIWRecord card_iw_data = 3;
  repeated ActivityChange activity_changes = 4;
  repeated PlaceRecord places = 5;
  repeated GnssAccumulatedDrivingRecord gnss_accumulated_driving = 6;
  repeated SpecificConditionRecord specific_conditions = 7;

  // Gen2 signature (ECC). See Appendix 1, 2.149.
  bytes signature = 8;
}